static/styles/zulip.css
/* ... */
/* Round edges on the bottom of each message --
   a necessary evil in the world of tables */
.last_message .messagebox {
    border-radius: 0px 0px 3px 3px;
    border: none;
    border-left: 1px solid #ddd;
    border-bottom: 1px solid #ddd;
    border-right: 1px solid #ddd;
    overflow: hidden;
}


/* Base color backgrounds for messageboxes,
   private messages, mentions, and unread messages */

.compose_table .messagebox {
   box-shadow: none !important;
}

.messagebox {
    background-color: #ffffff;
    position: relative;
}

.private-message .messagebox {
    background-color: #feffe0;
}

.mention .messagebox {
    background-color: #ffe4e0;
}

.messagebox .message_top_line {
    position: relative;
}

.messagebox .unread_marker {
    display: block;
    position: absolute;
    width: 10px;
    height: 10px;
    border-radius: 16px;
    background: #2b8213;
    left: -31px;
    margin-top: 6px;
    opacity: 0;
    box-shadow: inset 1px 1px 1px -1px #000;
    border: 1px solid #fff;
}

.messagebox .unread_marker.slow_fade {
    -webkit-transition: all 2.7s ease-in;
    -moz-transition: all 2.7s ease-in;
    -o-transition: all 2.7s ease-in;
    transition: all 2.7s ease-in;
}

.messagebox .unread_marker.fast_fade {
    -webkit-transition: all 0.3s ease-in;
    -moz-transition: all 0.3s ease-in;
    -o-transition: all 0.3s ease-in;
    transition: all 0.3s ease-in;
}

.include-sender .messagebox .unread_marker {
    margin-top: 8px; /* To line up with avatar */
}

.unread .unread_marker {
    opacity: 1;
}

.selected_message .pointer_icon {
    visibility: visible;
}

.selected_message .messagebox {
    z-index: 1;
    border-color: #3093c3;
    box-shadow: 0px 0px 6px 0px #3093c3;
}
.selected_message .messagebox-content {
    box-shadow: inset 0px 2px 0px -1px #39afe8, inset 0px -2px 0px -1px #39afe8, inset 9px 0px 0px rgba(255,255,255,0.5);
 }

 .last_message.selected_message .messagebox-content {
    box-shadow: inset 0px 2px 0px -1px #39afe8, inset 9px 0px 0px rgba(255,255,255,0.5);
 }

.selected_message .inline_profile_picture {
    border-color: #AAA;
}

.selected_message.private-message .inline_profile_picture {
    border-color: #AAA;
}

.message_sender {
    height: 0px;
    vertical-align: top;
    position: relative;
}

.sender_name {
    color: #333;
    display: inline-block;
    font-weight: bold;
    vertical-align: top;
    position: relative;
    top: -2px;
}

.sender-status {
    display: block;
    margin-left: 35px;
    margin-top: -24px;
    padding-bottom: 20px;
}

.sender-status .sender_name {
    font-weight: bold;
    position: static;
    vertical-align: bottom;
}

.sender_name_hovered .sender_name {
    color: #0088CC;
}

.sender_name_hovered .inline_profile_picture {
    border-color: #0088CC;
}

.actions_hover:hover {
    color: #0088CC;
}

a.message_label_clickable:hover {
    cursor: pointer;
    color: #08C;
}

.on_hover_topic_edit {
    opacity: .1;
}

.always_visible_topic_edit {
    opacity: .7;
}

.on_hover_topic_edit:hover,.always_visible_topic_edit:hover {
    cursor: pointer;
    opacity: 1.0;
}

.edit_content {
    opacity: .4;
    width: 0px;
    height: 0px;
    display: inline-block;
    position: relative;
}

.edit_content i {
    position: absolute;
    display: block;
    background: #ffffff;
    top: -0.9em;
    left: 0.4em;
    border-radius: 1px;
    padding: 1px 2px;
    border: 1px dotted #ccc;
}

.edit_content:hover {
    cursor: pointer;
    opacity: 1.0;
}

/* Brighten text because of the dark background */
.dark_background a,
.dark_background {
    color: #ffffff;
}

.dark_background a.message_label_clickable:hover {
    color: #3BF;
}

.message_top_line {
    position: relative;
}

.include-sender .message_top_line {
    margin-top: 5px;
}

.message-right {
    float: right;
}

.small {
    font-size: 80%;
}

.tiny {
    font-size: 60%;
}

.actions_hovered .message_time,
.actions_hovered .info {
    color: #0088CC;
    cursor: pointer;
}

.message_hovered .info,
.message_hovered .empty-star {
    visibility: visible;
}

.actions_hovered .actions_link {
    text-decoration: underline;
}

div.message_table {
    border-collapse: separate;
    margin-left: auto;
    display: none;
    width: 100%;
}

table.compose_table {
    table-layout: fixed;
    margin-left: auto;
    width: 100%;
}

div.focused_table {
    display: block;
}

.include-sender .message_content {
    margin-top: -8px;
}

.message_content {
    line-height: 18px;
    padding-left: 35px; /* Also edit #message_edit_form .edit-controls */
    display: block;
}
.message_edit_content {
    line-height: 18px;
}
.message_edit_topic_propagate{
    display: inline-block;
    width: 400px;
}

.message_content.condensed {
    max-height: 8.5em;
    overflow: hidden;
}
.message_content.collapsed {
    max-height: 0em;
    overflow: hidden;
}

.message_length_controller {
    display: none;
    text-align: center;
    color: #0088CC;

    /* to match .message_content */
    margin-left: 5px;
    margin-right: 35px;
}

.message_length_controller:hover {
    text-decoration: underline;
}

div.message_content table {
    padding-right: 10px;
    margin: 5px 5px 5px 5px;
    width: 99%;
}

div.message_content thead {
    background-color: #EFEFEF;
}

div.message_content div {
    display: table-row;
    vertical-align: inherit;
}

div.message_content div {
    border: 1px solid #cccccc;
    padding: 4px;
    text-align: left;
}

div.message_content div {
    border: 1px solid #cccccc;
    padding: 4px;
}

blockquote {
    margin-bottom: 6px;
}

blockquote p {
    line-height: inherit;
    font-size:   inherit;
}

.messagebox {
    word-wrap: break-word;
    cursor: pointer;
    vertical-align: top;
    border: none;
    border-left: 1px solid #ddd;
    border-right: 1px solid #ddd;
}

.messagebox-content {
    padding: 1px 85px 1px 15px;
}

.messagebox p {
    margin: 3px 0px 3px 0px;
}
/* ... */

